<resources>
    <string name="app_name" translatable="false">Mythtv Player</string>
    <string name="app_version">set in gradle</string>
    <string name="all_recordings">All Recordings</string>
    <string name="all_videos">All Videos</string>
    <string name="search_title">Search</string>
    <string name="search_results">Search Results</string>
    <string name="connecting">Connecting to master backend</string>
    <string name="connecting_failed">Connecting to master backend failed!</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text" translatable="false">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="recording">Recording</string>
    <string name="video">Video</string>
    <string name="should_start" translatable="false">shouldStart</string>
    <string name="start_position" translatable="false">startPosition</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="oops">Oops</string>
    <string name="failed">Playback failed</string>
    <string name="not_connected">Master Backend connection failed!.\nCheck your network connection or the master backend settings.</string>
    <string name="empty">There are no items to display.</string>
    <string name="title_info_transition" translatable="false">title_info_transition</string>
    <string name="recording_transition" translatable="false">recording_transition</string>
    <string name="video_transition" translatable="false">title_info_transition</string>
    <string name="search_hint">Show, Movie, Actor, Character, Channel</string>
    <string name="ready_to_stream">Ready to Stream</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="activity_watch_recordings" translatable="false">Watch Recordings</string>
    <string name="activity_watch_videos_grid" translatable="false">Watch Videos Grid</string>
    <string name="activity_watch_videos_list" translatable="false">Watch Videos List</string>
    <string name="activity_preferences" translatable="false">Settings</string>
    <string name="drawer_item_watch_recordings">Watch Recordings</string>
    <string name="drawer_item_watch_videos">Watch Videos</string>
    <string name="drawer_item_preferences">Settings</string>
    <string name="title_activity_videos" translatable="false">VideosActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="launch_external_player">Launch External Player</string>
    <string name="browse_title" translatable="false"><![CDATA[Videos]]></string>
    <string name="recordings_browse_title" translatable="false"><![CDATA[MythTV Recordings]]></string>
    <string name="videos_browse_title" translatable="false"><![CDATA[MythTV Videos]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title" translatable="false"><![CDATA[Vertical Video Grid]]></string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_recording">Watch episode</string>
    <string name="queue_hls">Queue HLS</string>
    <string name="queued">HLS Queued</string>
    <string name="queued_notice">HLS Transcode in progress, please wait.</string>
    <string name="watch_video">Watch video</string>
    <string name="pref_backend_title" translatable="false">Master Backend</string>
    <string name="pref_backend_url_title">Master Backend Address</string>
    <string name="pref_backend_url_description">The hostname or ip address of the master backend</string>
    <string name="pref_backend_url">hostname or ip address</string>
    <string name="pref_backend_port_title" translatable="false">Master Backend Port</string>
    <string name="pref_backend_port_description">The port of the master backend</string>
    <string name="pref_backend_port" translatable="false">6544</string>
    <string name="pref_hls_title">HLS Transcode Options</string>
    <string name="pref_hls_video_width_title">Width</string>
    <string name="pref_hls_video_width_default" translatable="false">0</string>
    <string name="pref_hls_video_height_title">Height</string>
    <string name="pref_hls_video_height_default" translatable="false">0</string>
    <string name="pref_hls_video_bitrate_title">Bitrate</string>
    <string name="pref_hls_video_bitrate_default" translatable="false">800000</string>
    <string name="pref_hls_audio_bitrate_title">Audio Bitrate</string>
    <string name="pref_hls_audio_bitrate_default" translatable="false">64000</string>
    <string name="pref_default_player">Default Player</string>
    <string name="pref_internal_player">Internal Player</string>
    <string name="pref_external_player_override_video">External Player for Videos</string>
    <string name="pref_internal_player_summary_on">Playback will be handled by the Internal Player</string>
    <string name="pref_internal_player_summary_off">Playback will be handled by an External Player</string>
    <string name="pref_external_player_override_video_summary_on">Videos will be played by an External Player</string>
    <string name="pref_external_player_override_video_summary_off">Videos will be played by the Internal Player</string>
    <string name="pref_hls_video_width_title_summary">HLS transcode video width</string>
    <string name="pref_hls_video_height_title_summary">HLS transcode video height</string>
    <string name="pref_hls_video_bitrate_title_summary">HLS transcode video bitrate</string>
    <string name="pref_hls_audio_bitrate_title_summary">HLS transcode audio bitrate</string>
    <string name="pref_watch_videos">Video Preferences</string>
    <string name="season">Season:</string>
    <string name="episode">Episode:</string>
    <string name="play_button">Play</string>
    <string name="queue_button">Queue HLS</string>
    <string name="pref_show_adult_tab">Show Adult tab in Watch Videos</string>
    <string name="pref_show_adult_tab_summary_on">Adult tab will be shown</string>
    <string name="pref_show_adult_tab_summary_off">Adult tab will not be shown</string>
    <string name="pref_restrict_content_types">Only Display Selected Video Ratings</string>
    <string name="pref_restrict_content_types_summary_on">Videos for all types selected below will be shown</string>
    <string name="pref_restrict_content_types_summary_off">Show All Videos</string>
    <string name="pref_rating_g">G – General Audiences</string>
    <string name="pref_rating_nr">NR – Not Rated</string>
    <string name="pref_rating_pg">PG – Parental Guidance Suggested</string>
    <string name="pref_rating_pg13">PG-13 – Parents Strongly Cautioned</string>
    <string name="pref_rating_r">R – Restricted</string>
    <string name="pref_rating_nc17">NC-17 – Adults Only</string>
    <string name="pref_rating_nr_summary">This film is not rated.</string>
    <string name="pref_rating_g_summary">All ages admitted. Nothing that would offend parents for viewing by children.</string>
    <string name="pref_rating_pg_summary">Some material may not be suitable for children. Parents urged to give \"parental guidance\". May contain some material parents might not like for their young children.</string>
    <string name="pref_rating_pg13_summary">Some material may be inappropriate for children under 13. Parents are urged to be cautious. Some material may be inappropriate for pre-teenagers.</string>
    <string name="pref_rating_r_summary">Under 17 requires accompanying parent or adult guardian. Contains some adult material. Parents are urged to learn more about the film before taking their young children with them.</string>
    <string name="pref_rating_nc17_summary">No One 17 and Under Admitted. Clearly adult. Children are not admitted.</string>
    <string name="pref_content_ratings">Video Content Ratings</string>
    <string name="pref_video_display_preferences">Video Display Preferences</string>
    <string name="video_preferences">Video Settings</string>
    <string name="video_preferences_summary">Modify Videos Display and Filters</string>
    <string name="pref_parental_controls">Parental Controls</string>
    <string name="pref_enable_parental_controls">Enable Parental Controls</string>
    <string name="pref_enable_parental_controls_summary_on">Parental Controls are enabled</string>
    <string name="pref_enable_parental_controls_summary_off">Parental Controls are disabled</string>
    <string name="pref_parental_control_level">Select highest Parental Control level displayed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_description"></string>
    <string name="recording_preferences">Recording Settings</string>
    <string name="recording_preferences_summary">Modify Recordings Display and Filters</string>
    <string name="pref_set_default_recording_group">Recording Group Settings</string>
    <string name="pref_enable_default_recording_group">Enable Default Recording Group</string>
    <string name="pref_default_recording_group_summary_on">Only recordings in selected recording group will be displayed</string>
    <string name="pref_default_recording_group_summary_off">No Default Recording Group is set</string>
    <string name="pref_default_recording_group">Select Default Recording Group</string>
    <string name="recorded_programs_updated" translatable="false">Recordings Updated!</string>
    <string name="up" translatable="false">.. Up</string>
    <string name="action_video_module" translatable="false">Video Grid</string>
    <string name="action_video_list" translatable="false">View List</string>
    <string name="accessibility_overflow" translatable="false">overflow accessibility</string>
    <string name="exception_message_generic" translatable="false">There was an application error</string>
    <string name="exception_message_no_connection" translatable="false">There is no internet connection</string>
    <string name="exception_message_program_not_found" translatable="false">Cannot retrieve program data. Check your internet connection</string>
    <string name="btn_text_retry" translatable="false">Retry</string>
    <string name="recording_description_label" translatable="false">Details:</string>
    <string name="recording_cast_label" translatable="false">Cast:</string>
    <string name="recording_cast_name" translatable="false">Name</string>
    <string name="recording_cast_character" translatable="false">Character</string>
    <string name="recording_cast_role" translatable="false">Role</string>
    <string name="drm_error_not_supported" translatable="false">Protected content not supported on API levels below 18</string>
    <string name="drm_error_unsupported_scheme" translatable="false">This device does not support the required DRM scheme</string>
    <string name="drm_error_unknown" translatable="false">An unknown DRM error occurred</string>
    <string name="enable_background_audio" translatable="false">Play in background</string>
    <string name="encoder" translatable="false">Encoder %1$s [%2$s] is %3$s</string>
    <string name="encoder_state_error" translatable="false">in an errored state</string>
</resources>