<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginBottom="@dimen/margin">

    <RelativeLayout
        android:id="@+id/program_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/program_item_preview"
            android:layout_width="125dp"
            android:layout_height="75dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:layout_marginEnd="@dimen/outer_margin" />

        <TextView
            android:id="@+id/program_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:transitionName="@string/recording_transition"
            android:layout_toRightOf="@+id/program_item_preview"
            android:layout_toEndOf="@+id/program_item_preview"
            tools:text="test title" />

        <TextView
            android:id="@+id/program_item_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:transitionName="@string/title_info_transition"
            android:layout_below="@+id/program_item_title"
            android:layout_toRightOf="@+id/program_item_preview"
            android:layout_toEndOf="@+id/program_item_preview"
            tools:text="test sub title" />

        <TextView
            android:id="@+id/program_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_below="@+id/program_item_sub_title"
            android:layout_toRightOf="@+id/program_item_preview"
            android:layout_toEndOf="@+id/program_item_preview"
            tools:text="test date" />

        <ProgressBar
            android:id="@+id/program_item_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_below="@+id/program_item_date"
            android:layout_toRightOf="@+id/program_item_preview"
            android:layout_toEndOf="@+id/program_item_preview"
            android:indeterminate="true"
            android:minHeight="10dp"
            android:maxHeight="10dp"
            android:minWidth="100dp"
            android:maxWidth="100dp"
            android:progress="0"
            android:max="100"
            android:visibility="gone" />

        <TextView
            android:id="@+id/program_item_stream_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_below="@+id/program_item_progress"
            android:layout_toRightOf="@+id/program_item_preview"
            android:layout_toEndOf="@+id/program_item_preview"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/ready_to_stream"
            android:textColor="@color/primary_dark"
            android:gravity="end"
            android:visibility="invisible"
            tools:text="@string/ready_to_stream" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground" />

</android.support.v7.widget.CardView>